# fletcher

./: .gitignore  README.md  STUDY.md  pyproject.toml
eval/: metrics.py  run_comparison.py
eval/datasets/hard_negative/: hard_negatives.json
eval/datasets/normal/: normal_explanations.json
fletcher/: pipeline.py
fletcher/agents/: __init__.py  note_writer.py  orchestrator.py  schemas.py  synthesizer.py
fletcher/agents/content_critic/: completeness.py  conceptual.py  procedural.py
fletcher/architectures/: __init__.py  debate.py  full_debate.py  persona_debate.py  self_critique.py  skill_augmented.py
fletcher/finetuning/: __init__.py  policy_update.py
fletcher/llm/: client.py  factory.py  fake_client.py  hf_client.py  message.py
fletcher/rag/lecture_notes/: retriever.py
fletcher/serving/: __init__.py  config.py
fletcher/skills/: __init__.py  distillation.py  retrieval.py  skill_bank.jsonl  skill_bank.py
scripts/: distill_debate_logs.py  generate_debate_logs_smoke.py  generate_skill_debate_logs_smoke.py  test_content_critics.py  test_debate_graph.py  test_debate_logging.py  test_debate_round.py  test_full_debate.py  test_llm_wiring.py  test_orchestrator.py  test_policy_and_serving.py  test_schema.py  test_self_critique.py  test_skill_pipeline.py
